# Adventures-Under-The-Sea

./: .gitignore  CMakeLists.txt  README.md  README.txt  unitTests.cpp
imgui/: imgui-SFML.cpp  imgui.h  imgui_widgets.cpp
mainLauncher/: CMakeLists.txt
mainLauncher/imgui/: imgui.cpp  imgui_demo.cpp  imgui_internal.h
mainLauncher/imgui (2)/: CMakeLists.txt  imgui_draw.cpp
resources/: Test1.tmx  Test2.tmx  Test3.tmx  Test4.tmx  demo.tmx
resources/Sprites/: spritesheet.aseprite  titlescreen.aseprite
resources/images/tilemap/: Pouet.tsx  Tilemap.xml  TilesetTest.tsx
resources/tilemaps/: Tilemap.xml  TilemapLevel1.xml  TilemapLevel2.xml  Tilemap_template.xml
src/: CMakeLists.txt  GameManager.cpp  GameManager.h  myMain.cpp
src/Actors/: Actor.cpp  Actor.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  README.txt
src/Actors/EnemyCommands/: EnemyCommands.cpp  EnemyCommands.h  EnemyHandler.cpp  EnemyHandler.h  README.txt
src/Actors/Modules/: HealthModule.cpp  HealthModule.h  Module.cpp  Module.h  OxygenModule.cpp  OxygenModule.h  README.txt
src/Actors/PlayerCommands/: InputHandler.cpp  InputHandler.h  PlayerCommands.cpp  PlayerCommands.h  PlayerHandler.cpp  PlayerHandler.h  README.txt
src/Actors/PlayerStates/: PlayerState.cpp  PlayerState.h  PlayerStates.cpp  PlayerStates.h  README.txt
src/Actors/Strategy/: AttackStrategy.cpp  AttackStrategy.h  Context.cpp  Context.h  MovementStrategy.h  Strategy.h
src/Actors/Strategy/ConcreteStrategies/: FleeStrategy.h  MeleeAttackStrategy.cpp  MeleeAttackStrategy.h  PursuitStrategy.h  RangeAttackStrategy.h
src/Assets/: Definitions.cpp  Definitions.h  GameAssets.cpp  GameAssets.h  TilePatterns.h
src/Entities/: Bubble.cpp  Bubble.h  Entity.h
src/Levels/: Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  StartLevel.cpp  StartLevel.h
src/UI/: README.txt  UI.cpp  UI.h
src/World/: README.txt  Tile.cpp  Tile.h  Tilemap.cpp  Tilemap.h
unitTests/: CMakeLists.txt
